--- a/docs/docs-ref-autogen/word.yml
+++ b/docs/docs-ref-autogen/word.yml
@@ -18,9 +18,13 @@ items:
       - word.Word.ContentControl
       - word.Word.ContentControlAppearance
       - word.Word.ContentControlCollection
+      - word.Word.ContentControlEventArgs
       - word.Word.ContentControlType
       - word.Word.CustomProperty
       - word.Word.CustomPropertyCollection
+      - word.Word.CustomXmlPart
+      - word.Word.CustomXmlPartCollection
+      - word.Word.CustomXmlPartScopedCollection
       - word.Word.Document
       - word.Word.DocumentCreated
       - word.Word.DocumentProperties
@@ -50,6 +54,14 @@ items:
       - word.Word.Interfaces.CustomPropertyData
       - word.Word.Interfaces.CustomPropertyLoadOptions
       - word.Word.Interfaces.CustomPropertyUpdateData
+      - word.Word.Interfaces.CustomXmlPartCollectionData
+      - word.Word.Interfaces.CustomXmlPartCollectionLoadOptions
+      - word.Word.Interfaces.CustomXmlPartCollectionUpdateData
+      - word.Word.Interfaces.CustomXmlPartData
+      - word.Word.Interfaces.CustomXmlPartLoadOptions
+      - word.Word.Interfaces.CustomXmlPartScopedCollectionData
+      - word.Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
+      - word.Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
       - word.Word.Interfaces.DocumentCreatedData
       - word.Word.Interfaces.DocumentCreatedLoadOptions
       - word.Word.Interfaces.DocumentCreatedUpdateData
@@ -97,6 +109,12 @@ items:
       - word.Word.Interfaces.SectionData
       - word.Word.Interfaces.SectionLoadOptions
       - word.Word.Interfaces.SectionUpdateData
+      - word.Word.Interfaces.SettingCollectionData
+      - word.Word.Interfaces.SettingCollectionLoadOptions
+      - word.Word.Interfaces.SettingCollectionUpdateData
+      - word.Word.Interfaces.SettingData
+      - word.Word.Interfaces.SettingLoadOptions
+      - word.Word.Interfaces.SettingUpdateData
       - word.Word.Interfaces.TableBorderData
       - word.Word.Interfaces.TableBorderLoadOptions
       - word.Word.Interfaces.TableBorderUpdateData
@@ -138,6 +156,8 @@ items:
       - word.Word.Section
       - word.Word.SectionCollection
       - word.Word.SelectionMode
+      - word.Word.Setting
+      - word.Word.SettingCollection
       - word.Word.Style
       - word.Word.Table
       - word.Word.TableBorder
@@ -150,7 +170,7 @@ items:
       - word.Word.UnderlineType
       - word.Word.VerticalAlignment
   - uid: word.Word.run
-    summary: '<span data-ttu-id="ca46d-101">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="ca46d-101">Executes a batch script that performs actions on the Word object model, using the RequestContext of previously created API objects.</span></span>'
+    summary: '<span data-ttu-id="6432e-101">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="6432e-101">Executes a batch script that performs actions on the Word object model, using the RequestContext of previously created API objects.</span></span>'
     name: Word.run
     fullName: Word.run
     langs:
@@ -164,15 +184,15 @@ items:
         description: ''
       parameters:
         - id: objects
-          description: '<span data-ttu-id="ca46d-102">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="ca46d-102">An array of previously created API objects.</span></span> <span data-ttu-id="ca46d-103">将验证该数组, 以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="ca46d-103">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="ca46d-104">批处理将使用此共享 RequestContext, 这意味着应用于这些对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="ca46d-104">The batch will use this shared RequestContext, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
+          description: '<span data-ttu-id="6432e-102">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="6432e-102">An array of previously created API objects.</span></span> <span data-ttu-id="6432e-103">将验证该数组, 以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="6432e-103">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="6432e-104">批处理将使用此共享 RequestContext, 这意味着应用于这些对象的任何更改都将由 "context。 sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="6432e-104">The batch will use this shared RequestContext, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
           type:
             - 'OfficeExtension.ClientObject[]'
         - id: batch
-          description: '<span data-ttu-id="ca46d-105">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="ca46d-105">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="ca46d-106">context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="ca46d-106">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="ca46d-107">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="ca46d-107">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="6432e-105">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="6432e-105">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="6432e-106">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="6432e-106">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="6432e-107">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="6432e-107">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
   - uid: word.Word.run_1
-    summary: '<span data-ttu-id="ca46d-108">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="ca46d-108">Executes a batch script that performs actions on the Word object model, using the RequestContext of a previously created API object.</span></span> <span data-ttu-id="ca46d-109">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="ca46d-109">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: '<span data-ttu-id="6432e-108">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="6432e-108">Executes a batch script that performs actions on the Word object model, using the RequestContext of a previously created API object.</span></span> <span data-ttu-id="6432e-109">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="6432e-109">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
     name: Word.run_1
     fullName: Word.run_1
     langs:
@@ -186,21 +206,21 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="ca46d-110">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="ca46d-110">A previously created API object.</span></span> <span data-ttu-id="ca46d-111">批处理将使用与传入的对象相同的 RequestContext, 这意味着应用于该对象的任何更改都将由 "context" () 来选取。</span><span class="sxs-lookup"><span data-stu-id="ca46d-111">The batch will use the same RequestContext as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: '<span data-ttu-id="6432e-110">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="6432e-110">A previously created API object.</span></span> <span data-ttu-id="6432e-111">批处理将使用与传入的对象相同的 RequestContext, 这意味着应用于该对象的任何更改都将由 "context" () 来选取。</span><span class="sxs-lookup"><span data-stu-id="6432e-111">The batch will use the same RequestContext as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
           type:
             - office.OfficeExtension.ClientObject
         - id: batch
-          description: '<span data-ttu-id="ca46d-112">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="ca46d-112">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="ca46d-113">context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="ca46d-113">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="ca46d-114">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="ca46d-114">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="6432e-112">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="6432e-112">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="6432e-113">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="6432e-113">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="6432e-114">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="6432e-114">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
   - uid: word.Word.run_2
-    summary: '<span data-ttu-id="ca46d-115">使用新的 RequestContext 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="ca46d-115">Executes a batch script that performs actions on the Word object model, using a new RequestContext.</span></span> <span data-ttu-id="ca46d-116">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="ca46d-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: '<span data-ttu-id="6432e-115">使用新的 RequestContext 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="6432e-115">Executes a batch script that performs actions on the Word object model, using a new RequestContext.</span></span> <span data-ttu-id="6432e-116">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="6432e-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
     remarks: |-
-      <span data-ttu-id="ca46d-117">除了此签名之外, 此方法还具有以下签名, 使您可以使用以前创建的对象的请求上下文恢复:</span><span class="sxs-lookup"><span data-stu-id="ca46d-117">In addition to this signature, the method also has the following signatures, which allow you to resume using the request context of previously created objects:</span></span>
+      <span data-ttu-id="6432e-117">除了此签名之外, 此方法还具有以下签名, 使您可以使用以前创建的对象的请求上下文恢复:</span><span class="sxs-lookup"><span data-stu-id="6432e-117">In addition to this signature, the method also has the following signatures, which allow you to resume using the request context of previously created objects:</span></span>
 
-      <span data-ttu-id="ca46d-118">run<T>(object: officeextension.error, batch: (context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="ca46d-118">run<T>(object: OfficeExtension.ClientObject, batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="ca46d-119">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="ca46d-119">&gt; Promise<T>): Promise<T>;</span></span>
+      <span data-ttu-id="6432e-118">run<T>(Object: officeextension.error, batch: (Context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="6432e-118">run<T>(object: OfficeExtension.ClientObject, batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="6432e-119">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="6432e-119">&gt; Promise<T>): Promise<T>;</span></span>
 
-      <span data-ttu-id="ca46d-120">run<T>(对象: officeextension.error\[\], batch: (context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="ca46d-120">run<T>(objects: OfficeExtension.ClientObject\[\], batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="ca46d-121">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="ca46d-121">&gt; Promise<T>): Promise<T>;</span></span>
+      <span data-ttu-id="6432e-120">run<T>(对象: officeextension.error\[\], batch: (context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="6432e-120">run<T>(objects: OfficeExtension.ClientObject\[\], batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="6432e-121">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="6432e-121">&gt; Promise<T>): Promise<T>;</span></span>
     name: Word.run_2
     fullName: Word.run_2
     langs:
@@ -214,7 +234,7 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="ca46d-122">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="ca46d-122">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="ca46d-123">context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="ca46d-123">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="ca46d-124">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="ca46d-124">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="6432e-122">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="6432e-122">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="6432e-123">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="6432e-123">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="6432e-124">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="6432e-124">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
 references:
@@ -240,12 +260,20 @@ references:
     name: Word.ContentControlAppearance
   - uid: word.Word.ContentControlCollection
     name: Word.ContentControlCollection
+  - uid: word.Word.ContentControlEventArgs
+    name: Word.ContentControlEventArgs
   - uid: word.Word.ContentControlType
     name: Word.ContentControlType
   - uid: word.Word.CustomProperty
     name: Word.CustomProperty
   - uid: word.Word.CustomPropertyCollection
     name: Word.CustomPropertyCollection
+  - uid: word.Word.CustomXmlPart
+    name: Word.CustomXmlPart
+  - uid: word.Word.CustomXmlPartCollection
+    name: Word.CustomXmlPartCollection
+  - uid: word.Word.CustomXmlPartScopedCollection
+    name: Word.CustomXmlPartScopedCollection
   - uid: word.Word.Document
     name: Word.Document
   - uid: word.Word.DocumentCreated
@@ -304,6 +332,22 @@ references:
     name: Word.Interfaces.CustomPropertyLoadOptions
   - uid: word.Word.Interfaces.CustomPropertyUpdateData
     name: Word.Interfaces.CustomPropertyUpdateData
+  - uid: word.Word.Interfaces.CustomXmlPartCollectionData
+    name: Word.Interfaces.CustomXmlPartCollectionData
+  - uid: word.Word.Interfaces.CustomXmlPartCollectionLoadOptions
+    name: Word.Interfaces.CustomXmlPartCollectionLoadOptions
+  - uid: word.Word.Interfaces.CustomXmlPartCollectionUpdateData
+    name: Word.Interfaces.CustomXmlPartCollectionUpdateData
+  - uid: word.Word.Interfaces.CustomXmlPartData
+    name: Word.Interfaces.CustomXmlPartData
+  - uid: word.Word.Interfaces.CustomXmlPartLoadOptions
+    name: Word.Interfaces.CustomXmlPartLoadOptions
+  - uid: word.Word.Interfaces.CustomXmlPartScopedCollectionData
+    name: Word.Interfaces.CustomXmlPartScopedCollectionData
+  - uid: word.Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
+    name: Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
+  - uid: word.Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
+    name: Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
   - uid: word.Word.Interfaces.DocumentCreatedData
     name: Word.Interfaces.DocumentCreatedData
   - uid: word.Word.Interfaces.DocumentCreatedLoadOptions
@@ -398,6 +442,18 @@ references:
     name: Word.Interfaces.SectionLoadOptions
   - uid: word.Word.Interfaces.SectionUpdateData
     name: Word.Interfaces.SectionUpdateData
+  - uid: word.Word.Interfaces.SettingCollectionData
+    name: Word.Interfaces.SettingCollectionData
+  - uid: word.Word.Interfaces.SettingCollectionLoadOptions
+    name: Word.Interfaces.SettingCollectionLoadOptions
+  - uid: word.Word.Interfaces.SettingCollectionUpdateData
+    name: Word.Interfaces.SettingCollectionUpdateData
+  - uid: word.Word.Interfaces.SettingData
+    name: Word.Interfaces.SettingData
+  - uid: word.Word.Interfaces.SettingLoadOptions
+    name: Word.Interfaces.SettingLoadOptions
+  - uid: word.Word.Interfaces.SettingUpdateData
+    name: Word.Interfaces.SettingUpdateData
   - uid: word.Word.Interfaces.TableBorderData
     name: Word.Interfaces.TableBorderData
   - uid: word.Word.Interfaces.TableBorderLoadOptions
@@ -474,6 +530,10 @@ references:
     name: Word.SectionCollection
   - uid: word.Word.SelectionMode
     name: Word.SelectionMode
+  - uid: word.Word.Setting
+    name: Word.Setting
+  - uid: word.Word.SettingCollection
+    name: Word.SettingCollection
   - uid: word.Word.Style
     name: Word.Style
   - uid: word.Word.Table
