--- a/docs/docs-ref-autogen/word/word.interfaces.documentcreateddata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.documentcreateddata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: word.Word.Interfaces.DocumentCreatedData
-    summary: <span data-ttu-id="d9893-101">描述通过调用 "documentCreated ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d9893-101">An interface describing the data returned by calling "documentCreated.toJSON()".</span></span>
+    summary: <span data-ttu-id="7e564-101">描述通过调用 "documentCreated ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="7e564-101">An interface describing the data returned by calling "documentCreated.toJSON()".</span></span>
     name: Word.Interfaces.DocumentCreatedData
     fullName: Word.Interfaces.DocumentCreatedData
     langs:
@@ -11,14 +11,17 @@ items:
     children:
       - word.Word.Interfaces.DocumentCreatedData.body
       - word.Word.Interfaces.DocumentCreatedData.contentControls
+      - word.Word.Interfaces.DocumentCreatedData.customXmlParts
       - word.Word.Interfaces.DocumentCreatedData.properties
       - word.Word.Interfaces.DocumentCreatedData.saved
       - word.Word.Interfaces.DocumentCreatedData.sections
+      - word.Word.Interfaces.DocumentCreatedData.settings
   - uid: word.Word.Interfaces.DocumentCreatedData.body
     summary: |-
-      <span data-ttu-id="d9893-102">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="d9893-102">Gets the body object of the document.</span></span> <span data-ttu-id="d9893-103">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="d9893-103">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span> <span data-ttu-id="d9893-104">只读。</span><span class="sxs-lookup"><span data-stu-id="d9893-104">Read-only.</span></span>
+      <span data-ttu-id="7e564-102">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="7e564-102">Gets the body object of the document.</span></span> <span data-ttu-id="7e564-103">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="7e564-103">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span> <span data-ttu-id="7e564-104">只读。</span><span class="sxs-lookup"><span data-stu-id="7e564-104">Read-only.</span></span>
 
-      <span data-ttu-id="d9893-105">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9893-105">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7e564-105">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e564-105">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: body
     fullName: body
     langs:
@@ -31,9 +34,10 @@ items:
           - word.Word.Interfaces.BodyData
   - uid: word.Word.Interfaces.DocumentCreatedData.contentControls
     summary: |-
-      <span data-ttu-id="d9893-106">获取文档中的内容控件对象的集合。</span><span class="sxs-lookup"><span data-stu-id="d9893-106">Gets the collection of content control objects in the document.</span></span> <span data-ttu-id="d9893-107">这包括文档正文、标头、页脚、文本框等中的内容控件。</span><span class="sxs-lookup"><span data-stu-id="d9893-107">This includes content controls in the body of the document, headers, footers, textboxes, etc..</span></span> <span data-ttu-id="d9893-108">只读。</span><span class="sxs-lookup"><span data-stu-id="d9893-108">Read-only.</span></span>
+      <span data-ttu-id="7e564-106">获取文档中的内容控件对象的集合。</span><span class="sxs-lookup"><span data-stu-id="7e564-106">Gets the collection of content control objects in the document.</span></span> <span data-ttu-id="7e564-107">这包括文档正文、标头、页脚、文本框等中的内容控件。</span><span class="sxs-lookup"><span data-stu-id="7e564-107">This includes content controls in the body of the document, headers, footers, textboxes, etc..</span></span> <span data-ttu-id="7e564-108">只读。</span><span class="sxs-lookup"><span data-stu-id="7e564-108">Read-only.</span></span>
 
-      <span data-ttu-id="d9893-109">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9893-109">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7e564-109">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e564-109">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: contentControls
     fullName: contentControls
     langs:
@@ -44,11 +48,28 @@ items:
       return:
         type:
           - 'Word.Interfaces.ContentControlData[]'
+  - uid: word.Word.Interfaces.DocumentCreatedData.customXmlParts
+    summary: |-
+      <span data-ttu-id="7e564-110">获取文档中的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="7e564-110">Gets the custom XML parts in the document.</span></span> <span data-ttu-id="7e564-111">只读。</span><span class="sxs-lookup"><span data-stu-id="7e564-111">Read-only.</span></span>
+
+      <span data-ttu-id="7e564-112">\[[API 集: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e564-112">\[ [API set: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: customXmlParts
+    fullName: customXmlParts
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'customXmlParts?: Word.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Word.Interfaces.CustomXmlPartData[]'
   - uid: word.Word.Interfaces.DocumentCreatedData.properties
     summary: |-
-      <span data-ttu-id="d9893-110">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="d9893-110">Gets the properties of the document.</span></span> <span data-ttu-id="d9893-111">只读。</span><span class="sxs-lookup"><span data-stu-id="d9893-111">Read-only.</span></span>
+      <span data-ttu-id="7e564-113">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="7e564-113">Gets the properties of the document.</span></span> <span data-ttu-id="7e564-114">只读。</span><span class="sxs-lookup"><span data-stu-id="7e564-114">Read-only.</span></span>
 
-      <span data-ttu-id="d9893-112">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9893-112">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7e564-115">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e564-115">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: properties
     fullName: properties
     langs:
@@ -61,9 +82,10 @@ items:
           - Word.Interfaces.DocumentPropertiesData
   - uid: word.Word.Interfaces.DocumentCreatedData.saved
     summary: |-
-      <span data-ttu-id="d9893-p104">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="d9893-p104">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
+      <span data-ttu-id="7e564-p105">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="7e564-p105">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
 
-      <span data-ttu-id="d9893-116">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9893-116">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7e564-119">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e564-119">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: saved
     fullName: saved
     langs:
@@ -76,9 +98,10 @@ items:
           - boolean
   - uid: word.Word.Interfaces.DocumentCreatedData.sections
     summary: |-
-      <span data-ttu-id="d9893-117">获取文档中的节对象的集合。</span><span class="sxs-lookup"><span data-stu-id="d9893-117">Gets the collection of section objects in the document.</span></span> <span data-ttu-id="d9893-118">只读。</span><span class="sxs-lookup"><span data-stu-id="d9893-118">Read-only.</span></span>
+      <span data-ttu-id="7e564-120">获取文档中的节对象的集合。</span><span class="sxs-lookup"><span data-stu-id="7e564-120">Gets the collection of section objects in the document.</span></span> <span data-ttu-id="7e564-121">只读。</span><span class="sxs-lookup"><span data-stu-id="7e564-121">Read-only.</span></span>
 
-      <span data-ttu-id="d9893-119">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d9893-119">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="7e564-122">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e564-122">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: sections
     fullName: sections
     langs:
@@ -89,3 +112,19 @@ items:
       return:
         type:
           - 'Word.Interfaces.SectionData[]'
+  - uid: word.Word.Interfaces.DocumentCreatedData.settings
+    summary: |-
+      <span data-ttu-id="7e564-123">获取文档中的加载项设置。</span><span class="sxs-lookup"><span data-stu-id="7e564-123">Gets the add-in's settings in the document.</span></span> <span data-ttu-id="7e564-124">只读。</span><span class="sxs-lookup"><span data-stu-id="7e564-124">Read-only.</span></span>
+
+      <span data-ttu-id="7e564-125">\[[API 集: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e564-125">\[ [API set: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: settings
+    fullName: settings
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'settings?: Word.Interfaces.SettingData[];'
+      return:
+        type:
+          - 'Word.Interfaces.SettingData[]'
