--- a/docs/docs-ref-autogen/word/word.interfaces.documentcreatedloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.documentcreatedloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: word.Word.Interfaces.DocumentCreatedLoadOptions
     summary: |-
-      <span data-ttu-id="668aa-101">DocumentCreated 对象是 CreateDocument 创建的顶级对象。</span><span class="sxs-lookup"><span data-stu-id="668aa-101">The DocumentCreated object is the top level object created by Application.CreateDocument.</span></span> <span data-ttu-id="668aa-102">DocumentCreated 对象是特殊的文档对象。</span><span class="sxs-lookup"><span data-stu-id="668aa-102">A DocumentCreated object is a special Document object.</span></span>
+      <span data-ttu-id="4e7eb-101">DocumentCreated 对象是 CreateDocument 创建的顶级对象。</span><span class="sxs-lookup"><span data-stu-id="4e7eb-101">The DocumentCreated object is the top level object created by Application.CreateDocument.</span></span> <span data-ttu-id="4e7eb-102">DocumentCreated 对象是特殊的文档对象。</span><span class="sxs-lookup"><span data-stu-id="4e7eb-102">A DocumentCreated object is a special Document object.</span></span>
 
-      <span data-ttu-id="668aa-103">\[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="668aa-103">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4e7eb-103">\[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4e7eb-103">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: Word.Interfaces.DocumentCreatedLoadOptions
     fullName: Word.Interfaces.DocumentCreatedLoadOptions
     langs:
@@ -29,9 +29,10 @@ items:
           - boolean
   - uid: word.Word.Interfaces.DocumentCreatedLoadOptions.body
     summary: |-
-      <span data-ttu-id="668aa-104">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="668aa-104">Gets the body object of the document.</span></span> <span data-ttu-id="668aa-105">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="668aa-105">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span>
+      <span data-ttu-id="4e7eb-104">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="4e7eb-104">Gets the body object of the document.</span></span> <span data-ttu-id="4e7eb-105">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="4e7eb-105">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span>
 
-      <span data-ttu-id="668aa-106">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="668aa-106">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4e7eb-106">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4e7eb-106">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: body
     fullName: body
     langs:
@@ -44,9 +45,10 @@ items:
           - word.Word.Interfaces.BodyLoadOptions
   - uid: word.Word.Interfaces.DocumentCreatedLoadOptions.properties
     summary: |-
-      <span data-ttu-id="668aa-107">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="668aa-107">Gets the properties of the document.</span></span>
+      <span data-ttu-id="4e7eb-107">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="4e7eb-107">Gets the properties of the document.</span></span>
 
-      <span data-ttu-id="668aa-108">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="668aa-108">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4e7eb-108">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4e7eb-108">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: properties
     fullName: properties
     langs:
@@ -59,9 +61,10 @@ items:
           - Word.Interfaces.DocumentPropertiesLoadOptions
   - uid: word.Word.Interfaces.DocumentCreatedLoadOptions.saved
     summary: |-
-      <span data-ttu-id="668aa-p103">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="668aa-p103">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
+      <span data-ttu-id="4e7eb-p103">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="4e7eb-p103">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
 
-      <span data-ttu-id="668aa-112">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="668aa-112">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4e7eb-112">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4e7eb-112">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: saved
     fullName: saved
     langs:
