--- a/docs/docs-ref-autogen/word/word.interfaces.documentcreatedupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.documentcreatedupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: word.Word.Interfaces.DocumentCreatedUpdateData
-    summary: '<span data-ttu-id="3a625-101">一个用于更新 DocumentCreated 对象上的数据的接口, 可用于 "DocumentCreated (</span><span class="sxs-lookup"><span data-stu-id="3a625-101">An interface for updating data on the DocumentCreated object, for use in "documentCreated.set(</span></span><!-- --><span data-ttu-id="3a625-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="3a625-102"></span></span><!-- --><span data-ttu-id="3a625-103">)".</span><span class="sxs-lookup"><span data-stu-id="3a625-103"></span></span>'
+    summary: '<span data-ttu-id="0e54e-101">一个用于更新 DocumentCreated 对象上的数据的接口, 可用于 "documentCreated (</span><span class="sxs-lookup"><span data-stu-id="0e54e-101">An interface for updating data on the DocumentCreated object, for use in "documentCreated.set(</span></span><!-- --><span data-ttu-id="0e54e-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="0e54e-102"></span></span><!-- --><span data-ttu-id="0e54e-103">)".</span><span class="sxs-lookup"><span data-stu-id="0e54e-103"></span></span>'
     name: Word.Interfaces.DocumentCreatedUpdateData
     fullName: Word.Interfaces.DocumentCreatedUpdateData
     langs:
@@ -13,9 +13,10 @@ items:
       - word.Word.Interfaces.DocumentCreatedUpdateData.properties
   - uid: word.Word.Interfaces.DocumentCreatedUpdateData.body
     summary: |-
-      <span data-ttu-id="3a625-104">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="3a625-104">Gets the body object of the document.</span></span> <span data-ttu-id="3a625-105">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="3a625-105">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span>
+      <span data-ttu-id="0e54e-104">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="0e54e-104">Gets the body object of the document.</span></span> <span data-ttu-id="0e54e-105">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="0e54e-105">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span>
 
-      <span data-ttu-id="3a625-106">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3a625-106">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0e54e-106">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0e54e-106">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: body
     fullName: body
     langs:
@@ -28,9 +29,10 @@ items:
           - word.Word.Interfaces.BodyUpdateData
   - uid: word.Word.Interfaces.DocumentCreatedUpdateData.properties
     summary: |-
-      <span data-ttu-id="3a625-107">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="3a625-107">Gets the properties of the document.</span></span>
+      <span data-ttu-id="0e54e-107">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="0e54e-107">Gets the properties of the document.</span></span>
 
-      <span data-ttu-id="3a625-108">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3a625-108">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0e54e-108">\[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0e54e-108">\[ [API set: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: properties
     fullName: properties
     langs:
