--- a/docs/docs-ref-autogen/word/word.interfaces.documentdata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.documentdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: word.Word.Interfaces.DocumentData
-    summary: <span data-ttu-id="9cca1-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9cca1-101">An interface describing the data returned by calling "document.toJSON()".</span></span>
+    summary: <span data-ttu-id="d0c15-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d0c15-101">An interface describing the data returned by calling "document.toJSON()".</span></span>
     name: Word.Interfaces.DocumentData
     fullName: Word.Interfaces.DocumentData
     langs:
@@ -11,14 +11,16 @@ items:
     children:
       - word.Word.Interfaces.DocumentData.body
       - word.Word.Interfaces.DocumentData.contentControls
+      - word.Word.Interfaces.DocumentData.customXmlParts
       - word.Word.Interfaces.DocumentData.properties
       - word.Word.Interfaces.DocumentData.saved
       - word.Word.Interfaces.DocumentData.sections
+      - word.Word.Interfaces.DocumentData.settings
   - uid: word.Word.Interfaces.DocumentData.body
     summary: |-
-      <span data-ttu-id="9cca1-102">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="9cca1-102">Gets the body object of the document.</span></span> <span data-ttu-id="9cca1-103">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="9cca1-103">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span> <span data-ttu-id="9cca1-104">只读。</span><span class="sxs-lookup"><span data-stu-id="9cca1-104">Read-only.</span></span>
+      <span data-ttu-id="d0c15-102">获取文档的正文对象。</span><span class="sxs-lookup"><span data-stu-id="d0c15-102">Gets the body object of the document.</span></span> <span data-ttu-id="d0c15-103">正文是不包括标头、页脚、脚注、文本框等的文本。</span><span class="sxs-lookup"><span data-stu-id="d0c15-103">The body is the text that excludes headers, footers, footnotes, textboxes, etc..</span></span> <span data-ttu-id="d0c15-104">只读。</span><span class="sxs-lookup"><span data-stu-id="d0c15-104">Read-only.</span></span>
 
-      <span data-ttu-id="9cca1-105">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9cca1-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d0c15-105">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0c15-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: body
     fullName: body
     langs:
@@ -31,9 +33,9 @@ items:
           - word.Word.Interfaces.BodyData
   - uid: word.Word.Interfaces.DocumentData.contentControls
     summary: |-
-      <span data-ttu-id="9cca1-106">获取文档中的内容控件对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9cca1-106">Gets the collection of content control objects in the document.</span></span> <span data-ttu-id="9cca1-107">这包括文档正文、标头、页脚、文本框等中的内容控件。</span><span class="sxs-lookup"><span data-stu-id="9cca1-107">This includes content controls in the body of the document, headers, footers, textboxes, etc..</span></span> <span data-ttu-id="9cca1-108">只读。</span><span class="sxs-lookup"><span data-stu-id="9cca1-108">Read-only.</span></span>
+      <span data-ttu-id="d0c15-106">获取文档中的内容控件对象的集合。</span><span class="sxs-lookup"><span data-stu-id="d0c15-106">Gets the collection of content control objects in the document.</span></span> <span data-ttu-id="d0c15-107">这包括文档正文、标头、页脚、文本框等中的内容控件。</span><span class="sxs-lookup"><span data-stu-id="d0c15-107">This includes content controls in the body of the document, headers, footers, textboxes, etc..</span></span> <span data-ttu-id="d0c15-108">只读。</span><span class="sxs-lookup"><span data-stu-id="d0c15-108">Read-only.</span></span>
 
-      <span data-ttu-id="9cca1-109">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9cca1-109">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d0c15-109">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0c15-109">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: contentControls
     fullName: contentControls
     langs:
@@ -44,11 +46,27 @@ items:
       return:
         type:
           - 'Word.Interfaces.ContentControlData[]'
+  - uid: word.Word.Interfaces.DocumentData.customXmlParts
+    summary: |-
+      <span data-ttu-id="d0c15-110">获取文档中的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="d0c15-110">Gets the custom XML parts in the document.</span></span> <span data-ttu-id="d0c15-111">只读。</span><span class="sxs-lookup"><span data-stu-id="d0c15-111">Read-only.</span></span>
+
+      <span data-ttu-id="d0c15-112">\[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0c15-112">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: customXmlParts
+    fullName: customXmlParts
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'customXmlParts?: Word.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Word.Interfaces.CustomXmlPartData[]'
   - uid: word.Word.Interfaces.DocumentData.properties
     summary: |-
-      <span data-ttu-id="9cca1-110">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="9cca1-110">Gets the properties of the document.</span></span> <span data-ttu-id="9cca1-111">只读。</span><span class="sxs-lookup"><span data-stu-id="9cca1-111">Read-only.</span></span>
+      <span data-ttu-id="d0c15-113">获取文档的属性。</span><span class="sxs-lookup"><span data-stu-id="d0c15-113">Gets the properties of the document.</span></span> <span data-ttu-id="d0c15-114">只读。</span><span class="sxs-lookup"><span data-stu-id="d0c15-114">Read-only.</span></span>
 
-      <span data-ttu-id="9cca1-112">\[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9cca1-112">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d0c15-115">\[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0c15-115">\[ [API set: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: properties
     fullName: properties
     langs:
@@ -61,9 +79,9 @@ items:
           - Word.Interfaces.DocumentPropertiesData
   - uid: word.Word.Interfaces.DocumentData.saved
     summary: |-
-      <span data-ttu-id="9cca1-p104">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="9cca1-p104">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
+      <span data-ttu-id="d0c15-p105">指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。</span><span class="sxs-lookup"><span data-stu-id="d0c15-p105">Indicates whether the changes in the document have been saved. A value of true indicates that the document hasn't changed since it was saved. Read-only.</span></span>
 
-      <span data-ttu-id="9cca1-116">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9cca1-116">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d0c15-119">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0c15-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: saved
     fullName: saved
     langs:
@@ -76,9 +94,9 @@ items:
           - boolean
   - uid: word.Word.Interfaces.DocumentData.sections
     summary: |-
-      <span data-ttu-id="9cca1-117">获取文档中的节对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9cca1-117">Gets the collection of section objects in the document.</span></span> <span data-ttu-id="9cca1-118">只读。</span><span class="sxs-lookup"><span data-stu-id="9cca1-118">Read-only.</span></span>
+      <span data-ttu-id="d0c15-120">获取文档中的节对象的集合。</span><span class="sxs-lookup"><span data-stu-id="d0c15-120">Gets the collection of section objects in the document.</span></span> <span data-ttu-id="d0c15-121">只读。</span><span class="sxs-lookup"><span data-stu-id="d0c15-121">Read-only.</span></span>
 
-      <span data-ttu-id="9cca1-119">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9cca1-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d0c15-122">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0c15-122">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: sections
     fullName: sections
     langs:
@@ -89,3 +107,19 @@ items:
       return:
         type:
           - 'Word.Interfaces.SectionData[]'
+  - uid: word.Word.Interfaces.DocumentData.settings
+    summary: |-
+      <span data-ttu-id="d0c15-123">获取文档中的加载项设置。</span><span class="sxs-lookup"><span data-stu-id="d0c15-123">Gets the add-in's settings in the document.</span></span> <span data-ttu-id="d0c15-124">只读。</span><span class="sxs-lookup"><span data-stu-id="d0c15-124">Read-only.</span></span>
+
+      <span data-ttu-id="d0c15-125">\[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0c15-125">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: settings
+    fullName: settings
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'settings?: Word.Interfaces.SettingData[];'
+      return:
+        type:
+          - 'Word.Interfaces.SettingData[]'
