--- a/docs/docs-ref-autogen/word/word.interfaces.inlinepicturedata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.inlinepicturedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: word.Word.Interfaces.InlinePictureData
-    summary: <span data-ttu-id="1f0e6-101">描述通过调用 "inlinePicture ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-101">An interface describing the data returned by calling "inlinePicture.toJSON()".</span></span>
+    summary: <span data-ttu-id="eee77-101">描述通过调用 "inlinePicture ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="eee77-101">An interface describing the data returned by calling "inlinePicture.toJSON()".</span></span>
     name: Word.Interfaces.InlinePictureData
     fullName: Word.Interfaces.InlinePictureData
     langs:
@@ -13,13 +13,14 @@ items:
       - word.Word.Interfaces.InlinePictureData.altTextTitle
       - word.Word.Interfaces.InlinePictureData.height
       - word.Word.Interfaces.InlinePictureData.hyperlink
+      - word.Word.Interfaces.InlinePictureData.imageFormat
       - word.Word.Interfaces.InlinePictureData.lockAspectRatio
       - word.Word.Interfaces.InlinePictureData.width
   - uid: word.Word.Interfaces.InlinePictureData.altTextDescription
     summary: |-
-      <span data-ttu-id="1f0e6-102">获取或设置一个字符串, 表示与嵌入式图像相关联的可选文字。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-102">Gets or sets a string that represents the alternative text associated with the inline image.</span></span>
+      <span data-ttu-id="eee77-102">获取或设置一个字符串, 表示与嵌入式图像相关联的可选文字。</span><span class="sxs-lookup"><span data-stu-id="eee77-102">Gets or sets a string that represents the alternative text associated with the inline image.</span></span>
 
-      <span data-ttu-id="1f0e6-103">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f0e6-103">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eee77-103">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eee77-103">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: altTextDescription
     fullName: altTextDescription
     langs:
@@ -32,9 +33,9 @@ items:
           - string
   - uid: word.Word.Interfaces.InlinePictureData.altTextTitle
     summary: |-
-      <span data-ttu-id="1f0e6-104">获取或设置包含嵌入式图像的标题的字符串。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-104">Gets or sets a string that contains the title for the inline image.</span></span>
+      <span data-ttu-id="eee77-104">获取或设置包含嵌入式图像的标题的字符串。</span><span class="sxs-lookup"><span data-stu-id="eee77-104">Gets or sets a string that contains the title for the inline image.</span></span>
 
-      <span data-ttu-id="1f0e6-105">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f0e6-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eee77-105">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eee77-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: altTextTitle
     fullName: altTextTitle
     langs:
@@ -47,9 +48,9 @@ items:
           - string
   - uid: word.Word.Interfaces.InlinePictureData.height
     summary: |-
-      <span data-ttu-id="1f0e6-106">获取或设置描述嵌入式图像的高度的数字。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-106">Gets or sets a number that describes the height of the inline image.</span></span>
+      <span data-ttu-id="eee77-106">获取或设置描述嵌入式图像的高度的数字。</span><span class="sxs-lookup"><span data-stu-id="eee77-106">Gets or sets a number that describes the height of the inline image.</span></span>
 
-      <span data-ttu-id="1f0e6-107">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f0e6-107">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eee77-107">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eee77-107">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: height
     fullName: height
     langs:
@@ -62,9 +63,9 @@ items:
           - number
   - uid: word.Word.Interfaces.InlinePictureData.hyperlink
     summary: |-
-      <span data-ttu-id="1f0e6-108">获取或设置图像上的超链接。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-108">Gets or sets a hyperlink on the image.</span></span> <span data-ttu-id="1f0e6-109">使用 "\#" 将地址部分与可选位置部分分开。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-109">Use a '\#' to separate the address part from the optional location part.</span></span>
+      <span data-ttu-id="eee77-108">获取或设置图像上的超链接。</span><span class="sxs-lookup"><span data-stu-id="eee77-108">Gets or sets a hyperlink on the image.</span></span> <span data-ttu-id="eee77-109">使用 "\#" 将地址部分与可选位置部分分开。</span><span class="sxs-lookup"><span data-stu-id="eee77-109">Use a '\#' to separate the address part from the optional location part.</span></span>
 
-      <span data-ttu-id="1f0e6-110">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f0e6-110">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eee77-110">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eee77-110">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -75,11 +76,27 @@ items:
       return:
         type:
           - string
+  - uid: word.Word.Interfaces.InlinePictureData.imageFormat
+    summary: |-
+      <span data-ttu-id="eee77-111">获取嵌入式图像的格式。</span><span class="sxs-lookup"><span data-stu-id="eee77-111">Gets the format of the inline image.</span></span> <span data-ttu-id="eee77-112">只读。</span><span class="sxs-lookup"><span data-stu-id="eee77-112">Read-only.</span></span>
+
+      <span data-ttu-id="eee77-113">\[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eee77-113">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: imageFormat
+    fullName: imageFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'imageFormat?: Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg";'
+      return:
+        type:
+          - Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg"
   - uid: word.Word.Interfaces.InlinePictureData.lockAspectRatio
     summary: |-
-      <span data-ttu-id="1f0e6-111">获取或设置指示在您调整嵌入式图像大小时其是否保留原始比例的值。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-111">Gets or sets a value that indicates whether the inline image retains its original proportions when you resize it.</span></span>
+      <span data-ttu-id="eee77-114">获取或设置指示在您调整嵌入式图像大小时其是否保留原始比例的值。</span><span class="sxs-lookup"><span data-stu-id="eee77-114">Gets or sets a value that indicates whether the inline image retains its original proportions when you resize it.</span></span>
 
-      <span data-ttu-id="1f0e6-112">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f0e6-112">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eee77-115">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eee77-115">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: lockAspectRatio
     fullName: lockAspectRatio
     langs:
@@ -92,9 +109,9 @@ items:
           - boolean
   - uid: word.Word.Interfaces.InlinePictureData.width
     summary: |-
-      <span data-ttu-id="1f0e6-113">获取或设置描述嵌入式图像的宽度的数字。</span><span class="sxs-lookup"><span data-stu-id="1f0e6-113">Gets or sets a number that describes the width of the inline image.</span></span>
+      <span data-ttu-id="eee77-116">获取或设置描述嵌入式图像的宽度的数字。</span><span class="sxs-lookup"><span data-stu-id="eee77-116">Gets or sets a number that describes the width of the inline image.</span></span>
 
-      <span data-ttu-id="1f0e6-114">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f0e6-114">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eee77-117">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eee77-117">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
     name: width
     fullName: width
     langs:
